--- a/ch2-notes.html
+++ b/ch2-notes.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body>
-		<a href="ch1-notes.html">Prev</a>
+		<a href="index.html">Home</a> | <a href="ch1-notes.html">Prev</a>
 		<h1> Chapter2: Atomic Structure (परमाणु संरचना)h1>
 			<h2> 2.1 Atom परमाणु</h2>
 			<p>यदि किसी वस्तु या पदार्थ का निरंतर विभाजन किया जाए, तो जो सबसे छोटा अणु हमे प्राप्त होगा, उसे ही परमाणु कहते हैं।</p>
