--- a/ch3-notes.html
+++ b/ch3-notes.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body>
-		<a href="ch2-notes.html">Prev</a>
+		<a href="index.html">Home</a> | <a href="ch2-notes.html">Prev</a>
 		<h1> Chapter3: Atomic Structure</h1>
 			<h2> 3.1 Atom</h2>
 				<h3>3.1.1 Proton</h3>
@@ -13,6 +13,6 @@
 					<p> proton -proton -proton -proton -proton -proton -proton -proton -proton -proton -proton -proton -proton -</p>
 				<h3>3.1.3 Electron</h3>
 					<p> ElectronElectronElectronElectron Electron Electron </p>
-			<h2> 3.2 Padarth</h2>		
+			<h2> 3.2 Padarth</h2>
 	</body>
 </html>
