--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	</head>
 
 	<body>
-		<p>
-			<a href="ch1-notes.html">Chapter 1 Notes</a>
-	        <br />
-			<a href="ch2-notes.html">Chapter 2 Notes</a>
-	        <br />
-			<a href="ch3-notes.html">Chapter 3 Notes</a>
+		<p> Welcome to my notes ~Virendra Yadav</p>
+		 <br /> <br />
+			<a href="ch1-notes.html">Chemistry - Chapter 1 Notes</a>
+	        <br /> <br />
+			<a href="ch2-notes.html">Chemistry - Chapter 2 Notes</a>
+	        <br /> <br />
+			<a href="ch3-notes.html">Chemistry - Chapter 3 Notes</a>
 		</p>
 	</body>
 </html>
